--- a/forserver/loginstyle.css
+++ b/forserver/loginstyle.css
@@ -6,6 +6,12 @@ box-sizing: border-box;
 	outline: none;
 }
 
+body{
+  font-family: Arial;
+  background-color: #ffffcc;
+  padding: 50px;
+}
+
 
 .login {
 margin: 20px auto;
