관리자 페이지에서 상태코드 조회 부분을 항상 최신상태의 상태코드를 테이블의 형식으로 보기 편하게 가공하였습니다. client_review_delete 에서 total_review 가 변하도록 반영하였습니다. 관리자페이지의 css 가 조금 바뀌었습니다.

--- a/forserver/admin_all.css
+++ b/forserver/admin_all.css
@@ -19,7 +19,7 @@ padding: 50px;
 }
 .center-part{
     overflow: hidden;
-
+    background-color: #F3F3E0;
 }
 .nav_menu{
     float: top;
@@ -55,4 +55,7 @@ padding: 50px;
 .contents-main{
     float: left;
     padding: 10px;
+
+
+    
 }
