--- a/forserver/admin_all.css
+++ b/forserver/admin_all.css
@@ -49,7 +49,8 @@ padding: 50px;
     color: #ffffff;
 }
 .nav_menu a:hover{
-    color: #d4f4fa;
+    color: #000;
+    background-color: #18ECE9;
     border-bottom: 2px solid yellow;
 }
 .contents-main{
